# VoiceSub

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.ru.md  Stream Subtitle Translator.spec  build-release-msi.bat  build-release-msi.ps1  build-release.ps1  index.html  package-lock.json  package.json  rustfmt.toml  start-voicesub.bat  tsconfig.json  tsconfig.local-asr.json  tsconfig.tts.json  vite.config.ts  vite.local-asr.config.ts  vite.tts.config.ts  vite.worker.config.ts  vitest.lib.config.ts  vitest.lib.setup.ts  vitest.renderer.config.ts  vitest.worker.config.ts
crates/voicesub-asr-local/: Cargo.toml
crates/voicesub-asr-local/src/: asr_segment_queue.rs  async_decode.rs  capture.rs  config.rs  decode.rs  decode_pacing.rs  decode_timing.rs  deps.rs  diagnostics.rs  emit_policy.rs  emit_telemetry.rs  hallucination_filter.rs  inference.rs  lib.rs  local_asr_constants.rs  model_family.rs  model_manager.rs  pipeline.rs  realtime_settings.rs  recognition_processing.rs  runtime_session.rs  segment_enqueue.rs  segment_state.rs  service.rs  setup.rs  status.rs  test_session.rs  transfer.rs  vad_engine.rs  vad_tuning.rs
crates/voicesub-asr-local/tests/: golden_local_asr.rs
crates/voicesub-audio/: Cargo.toml  build.rs
crates/voicesub-audio/src/: error.rs  lib.rs  platform.rs  playback.rs  policy_config.rs  process_stats.rs  sonic_speed.rs  trace.rs
crates/voicesub-browser/: Cargo.toml
crates/voicesub-browser/src/: chrome_flags.rs  ecoqos.rs  gateway.rs  launch_config.rs  launch_stability.rs  launcher.rs  lib.rs  operational_fsm.rs  orphan_guard.rs  process_affinity.rs  profile_bloat_guard.rs  service.rs  trace.rs  webview2_memory.rs  webview2_messages.rs  webview2_runtime.rs  webview_power.rs
crates/voicesub-browser/tests/: browser_asr_gateway.rs  browser_asr_service.rs  chrome_launch_contract.rs  worker_svelte_contract.rs
crates/voicesub-export/: Cargo.toml
crates/voicesub-export/src/: lib.rs
crates/voicesub-http/: Cargo.toml
crates/voicesub-http/src/: lib.rs
crates/voicesub-http/tests/: common.rs  http_ws_smoke.rs  session_exports_smoke.rs
crates/voicesub-logging/: Cargo.toml
crates/voicesub-logging/src/: browser_trace.rs  compact_log_line.rs  diagnostics.rs  env_test.rs  jsonl_trace.rs  lib.rs  lifecycle.rs  log_rotation.rs  obs_trace.rs  pipeline_trace.rs  redaction.rs  rotating_log_file.rs  session.rs  structured_log_compact.rs  structured_runtime_logger.rs  subtitle_trace.rs  tts_trace.rs  ui_trace.rs  ws_trace.rs
crates/voicesub-obs/: Cargo.toml
crates/voicesub-obs/src/: auth.rs  client.rs  diagnostics.rs  error_codes.rs  lib.rs  send_integration_tests.rs  service.rs  settings.rs  text.rs  trace.rs
crates/voicesub-obs/tests/: caption_output.rs
crates/voicesub-partial-emit/: Cargo.toml
crates/voicesub-partial-emit/src/: coordinator.rs  lib.rs  policy.rs  settings.rs
crates/voicesub-partial-emit/tests/: golden_partial_emit.rs
crates/voicesub-subtitle/: Cargo.toml
crates/voicesub-subtitle/src/: lib.rs  lifecycle.rs  overlay_broadcaster.rs  presentation.rs  router.rs  router_actor.rs  style.rs  trace.rs  types.rs
crates/voicesub-subtitle/tests/: golden_subtitle.rs  golden_ttl_lifecycle.rs  overlay_contract.rs  subtitle_lifecycle_relevance.rs  subtitle_renderer_contract.rs  subtitle_router.rs
crates/voicesub-subtitle/tests/common/: mod.rs
crates/voicesub-translation/: Cargo.toml
crates/voicesub-translation/src/: cache.rs  dispatcher.rs  engine.rs  lib.rs  preview_lineage.rs  readiness.rs  runtime.rs  runtime_coordinator.rs
crates/voicesub-translation/src/providers/: azure.rs  baidu.rs  caiyun.rs  crypto_util.rs  deepl.rs  experimental_google_web.rs  mod.rs  (+11 more)
crates/voicesub-translation/tests/: dispatcher.rs  engine.rs  golden_stale_translation.rs  golden_translation.rs
crates/voicesub-tts/: Cargo.toml
crates/voicesub-tts/src/: async_runtime.rs  channel_orchestrator.rs  channel_queue.rs  config.rs  google_fetch.rs  ipc.rs  lib.rs  oauth_bridge.rs  playback_policy.rs  python_runtime.rs  queue.rs  service.rs  speech_pipeline.rs  subtitle_speech.rs  trace.rs  upstream_retry.rs
crates/voicesub-tts/tests/: subtitle_speech_service.rs
crates/voicesub-twitch/: Cargo.toml
crates/voicesub-twitch/src/: emoji.rs  emotes.rs  error.rs  filter.rs  irc.rs  lang.rs  lib.rs  links.rs  pipeline.rs  replacements.rs  service.rs  settings.rs  source_text_replacement.rs  symbols.rs  tls.rs  trace.rs
crates/voicesub-ws/: Cargo.toml
crates/voicesub-ws/src/: asr_worker.rs  event_bus.rs  event_sequence.rs  events.rs  lib.rs  publisher.rs  trace.rs
crates/voicesub-ws/tests/: event_sequence_contract.rs  ws_broadcast.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  local-asr.json  tts.json
src-tauri/permissions/: allow-voicesub-ipc.toml  allow-voicesub-local-asr-ipc.toml  allow-voicesub-tts-ipc.toml
src-tauri/permissions/autogenerated/: launch_browser_worker.toml  open_local_http_url.toml  set_dashboard_layout.toml  tts_bind_window_audio.toml  tts_channel_begin_next.toml  tts_channel_clear.toml  tts_channel_enqueue.toml  tts_channel_finish.toml  tts_channel_force_idle.toml  tts_channel_snapshot.toml  tts_enqueue.toml  tts_get_audio_routing.toml  tts_get_config.toml  tts_get_resource_telemetry.toml  tts_list_output_devices.toml  tts_open_system_url.toml  tts_open_window.toml  tts_plan_subtitle_speech.toml  tts_play_audio.toml  tts_reset_subtitle_planner.toml  tts_set_audio_device.toml  tts_set_channel_audio_device.toml  tts_set_enabled.toml  tts_set_playback_mode.toml  tts_set_provider.toml  tts_stop_channel.toml  tts_sync_source_text_replacement.toml  tts_twitch_connect.toml  tts_twitch_disconnect.toml  tts_twitch_get_status.toml  tts_update_speech_settings.toml  tts_update_twitch_settings.toml  tts_update_voice_settings.toml  voicesub_version.toml
src-tauri/src/: acl_matrix.rs  dashboard_nav.rs  event_routing.rs  ipc_pump.rs  lib.rs  local_asr.rs  main.rs  shell.rs  tts.rs  webview2_gate.rs  webview_memory.rs
src-tauri/windows/: hooks.nsh  installer.nsi
src-tauri/wix/: main.wxs
(+566 files in other folders)
