[workspace]
resolver = "2"
members = [
    "crates/voicesub-types",
    "crates/voicesub-config",
    "crates/voicesub-subtitle",
    "crates/voicesub-translation",
    "crates/voicesub-browser",
    "crates/voicesub-ws",
    "crates/voicesub-http",
    "crates/voicesub-logging",
    "crates/voicesub-export",
    "crates/voicesub-obs",
    "crates/voicesub-audio",
    "crates/voicesub-tts",
    "crates/voicesub-asr-local",
    "crates/voicesub-partial-emit",
    "crates/voicesub-twitch",
    "crates/voicesub-runtime",
    "src-tauri",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
voicesub-types = { path = "crates/voicesub-types" }
voicesub-config = { path = "crates/voicesub-config" }
voicesub-subtitle = { path = "crates/voicesub-subtitle" }
voicesub-translation = { path = "crates/voicesub-translation" }
voicesub-browser = { path = "crates/voicesub-browser" }
voicesub-ws = { path = "crates/voicesub-ws" }
voicesub-http = { path = "crates/voicesub-http" }
voicesub-logging = { path = "crates/voicesub-logging" }
voicesub-export = { path = "crates/voicesub-export" }
voicesub-obs = { path = "crates/voicesub-obs" }
voicesub-audio = { path = "crates/voicesub-audio" }
voicesub-tts = { path = "crates/voicesub-tts" }
voicesub-asr-local = { path = "crates/voicesub-asr-local" }
voicesub-partial-emit = { path = "crates/voicesub-partial-emit" }
voicesub-twitch = { path = "crates/voicesub-twitch" }
voicesub-runtime = { path = "crates/voicesub-runtime" }

axum = { version = "0.8", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
futures-util = "0.3"
http = "1"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
urlencoding = "2"
zip = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
unused_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
# Full pedantic as warn (CI `-D warnings` elevates remaining warns to errors).
# Group priority -1 so per-lint overrides below win.
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"
# High-churn pedantic noise for this tree (docs/API surface/casts/bool structs).
# New pedantic lints not listed here still warn and fail CI — ratchet by fixing or allowing.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
redundant_closure_for_method_calls = "allow"
map_unwrap_or = "allow"
semicolon_if_nothing_returned = "allow"
unreadable_literal = "allow"
items_after_statements = "allow"
assigning_clones = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
implicit_hasher = "allow"
module_name_repetitions = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
needless_continue = "allow"
case_sensitive_file_extension_comparisons = "allow"
default_trait_access = "allow"
used_underscore_binding = "allow"
format_collect = "allow"
format_push_string = "allow"
match_wildcard_for_single_variants = "allow"
return_self_not_must_use = "allow"
unnecessary_debug_formatting = "allow"
single_match_else = "allow"
unnested_or_patterns = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
borrow_as_ptr = "allow"
ptr_as_ptr = "allow"
explicit_iter_loop = "allow"
uninlined_format_args = "allow"
manual_string_new = "allow"
unchecked_time_subtraction = "allow"
needless_raw_string_hashes = "allow"
duration_suboptimal_units = "allow"

# Dev incremental compilation + Tauri multi crate-type (lib/cdylib) leaves orphaned
# hash directories under target/*/incremental/ (~0.7 GiB each). Disable globally.
[profile.dev]
incremental = false
split-debuginfo = "unpacked"

[profile.release]
incremental = false
strip = true
