[package]
name = "voicesub-asr-local"
version.workspace = true
edition.workspace = true
description = "VoiceSub Local ASR module — ONNX Runtime deps, config, readiness (parakeet-rs pipeline planned)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = { workspace = true }
toml = "0.8"
sha2 = "0.10"
futures-util = "0.3"
voicesub-partial-emit = { workspace = true }
parakeet-rs = { version = "0.3.6", default-features = false, features = ["cpu", "cuda", "ort-defaults", "load-dynamic"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "cuda"] }
cpal = "0.15"
hound = "3.5"
parking_lot = "0.12"
webrtc-vad = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
