[package]
name = "voicesub-http"
version.workspace = true
edition.workspace = true

[dependencies]
voicesub-runtime = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
voicesub-config = { workspace = true }
voicesub-tts = { workspace = true }
voicesub-types = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.29"
futures-util = { workspace = true }
tempfile = "3"
