[package]
name = "voicesub-logging"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
voicesub-types = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[lints]
workspace = true
