[package]
name = "voicesub-obs"
version.workspace = true
edition.workspace = true

[dependencies]
voicesub-logging = { workspace = true }
voicesub-subtitle = { workspace = true }
voicesub-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.29"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
voicesub-subtitle = { workspace = true }
