[package]
name = "voicesub-translation"
version.workspace = true
edition.workspace = true

[dependencies]
voicesub-subtitle = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
tempfile = "3"
wiremock = "0.6"
