[package]
name = "voicesub-tts"
version.workspace = true
edition.workspace = true
description = "VoiceSub TTS module — config, speech queue, audio routing integration"

[dependencies]
voicesub-audio = { workspace = true }
voicesub-logging = { workspace = true }
voicesub-twitch = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
